# relativevariability

./: .gitignore  README.md  interpolate.py  pyproject.toml  test.py  test.r
.github/workflows/: coverage.yml  fmt.yml  github-ci.yml  tests.yml
relativevariability/: __init__.py  bestdivision.py  datarange.py  ipr.py  iqr.py  maximumipr.py  maximumiqr.py  maximumrange.py  maximumsd.py  maximumvar.py  maxmssdgetn.py  mostleast.py  mssd.py  mssdparts.py  range.py  relativeiqr.py  relativerange.py  relativesd.py  relativevar.py  rmssd.py  tryadd.py  updateusefill.py
tests/: test_data_range.py  test_ipr.py  test_iqr.py  test_maximum_ipr.py  test_maximumsd.py  test_maximumvar.py  test_maxmssdgetn.py  test_mssd.py  test_range.py  test_relativesd.py  test_rmssd.py
